Bug 483748 - compressing using rar does not work
Summary: compressing using rar does not work
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-16 11:57 UTC by Marcus Johansson
Modified: 2024-04-07 01:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcus Johansson 2024-03-16 11:57:55 UTC
SUMMARY
Using rar to compress does not work after upgrade to plasma 6.
Un-compressing works.
using rar with cli works, ie: rar a archive.rar files_to_archive

#############################################################
STEPS TO REPRODUCE IN ARK
1. Open ark
2. Click New Archive
3. Change type to rar, create a name and click OK
4. Add files

OBSERVED RESULT
Nothing happens but the notice about "xxx.rar will be created as soon as you add a file" is gone.
No rar file is created and nothing is shown in the window.

EXPECTED RESULT
A created rar file with the contents showing.

#############################################################
STEPS TO REPRODUCE IN DOLPHIN
1. Open Dolphin
2. Right click something in Dolphin and select compress > compress to...
3. Change type to rar and click OK

OBSERVED RESULT
A notification that says "Compressing a file (Finished)" and a link to a non existing rar file.

EXPECTED RESULT
A created rar file.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro unstable
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
This is in wayland, have not tested x11, but find it highly unlikely that has anything to do with this.
Comment 1 Marcus Johansson 2024-03-16 11:59:48 UTC
KDE forum thread here:
https://discuss.kde.org/t/is-ark-a-wrapper-for-rar/12451
Comment 2 Marcus Johansson 2024-03-16 12:55:55 UTC
Changing "compression method" from RAR4 to RAR5 fixes the issue, but has to be done every time an archive is created on either methods.
Comment 3 RebelQuack 2024-03-17 06:49:40 UTC
This is not so much a *bug* as it is KDE needing to play *catch up*:

RarLabs have removed the ability to *compress* using RAR4 compression as from the new RAR 7.0.0 version; from the RAR 7.0.0 'whatsnew.txt' file within the package:

~~~
6. Creating archives in RAR 4.x format isn't supported anymore. Options and switches specific for this format are removed. It doesn't affect RAR 4.x archives decompression, which is included into RAR.
~~~

The default selection via KDE/ark is RAR4; selecting RAR5 compression works as expected.
The *fix* in this instance will be comparatively easy; remove the ability to select RAR4 compression, leaving RAR5 as the remaining default.
I trust this information will save someone some time.

Cheers.

PS: Thanks to Bedna for reporting the issue (Vi ses snart, på Manjaro-forumet).
Comment 4 Bug Janitor Service 2024-03-17 10:39:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/237
Comment 5 Méven Car 2024-03-25 13:19:10 UTC
Git commit a43fa704d78c7840d946fef30683aceba412cc3b by Méven Car.
Committed on 25/03/2024 at 13:16.
Pushed by meven into branch 'master'.

clirarplugin: disable RAR4 compression method

M  +0    -14   kerfuffle/compressionoptionswidget.cpp
M  +2    -4    plugins/clirarplugin/kerfuffle_clirar.json.cmake

https://invent.kde.org/utilities/ark/-/commit/a43fa704d78c7840d946fef30683aceba412cc3b
Comment 6 Méven Car 2024-03-30 11:49:01 UTC
Git commit 48b9a6ab167eb5995692d0358672fbccb8147f70 by Méven Car.
Committed on 30/03/2024 at 11:40.
Pushed by meven into branch 'release/24.02'.

clirarplugin: disable RAR4 compression method
(cherry picked from commit a43fa704d78c7840d946fef30683aceba412cc3b)

M  +0    -14   kerfuffle/compressionoptionswidget.cpp
M  +2    -4    plugins/clirarplugin/kerfuffle_clirar.json.cmake

https://invent.kde.org/utilities/ark/-/commit/48b9a6ab167eb5995692d0358672fbccb8147f70