clirarplugin: disable RAR4 compression method

BUG: 483748
(cherry picked from commit a43fa704d78c7840d946fef30683aceba412cc3b)