plugins/clirarplugin/kerfuffle_clirar.json.cmake
@@ -116,14 +116,12 @@
         "CompressionLevelDefault": 3,
         "CompressionLevelMax": 5,
         "CompressionLevelMin": 0,
-        "CompressionMethodDefault": "RAR4",
+        "CompressionMethodDefault": "RAR5",
         "CompressionMethods": {
-            "RAR4": "4",
             "RAR5": "5"
         },
-        "EncryptionMethodDefault": "AES128",
+        "EncryptionMethodDefault": "AES256",
         "EncryptionMethods": [
-            "AES128",
             "AES256"
         ],
         "HeaderEncryption": true,
